tests/128_Imagick_setIteratorIndex_basic.out
Fatal error: Uncaught exception 'ImagickException' with message 'Unable to set iterator index' in /home/github/mkoppanen-imagick/tests/128_Imagick_setIteratorIndex_basic.php:8
Stack trace:
#0 /home/github/mkoppanen-imagick/tests/128_Imagick_setIteratorIndex_basic.php(8): Imagick->setiteratorindex(3)
#1 /home/github/mkoppanen-imagick/tests/128_Imagick_setIteratorIndex_basic.php(21): setIteratorIndex(3)
#2 {main}
  thrown in /home/github/mkoppanen-imagick/tests/128_Imagick_setIteratorIndex_basic.php on line 8